fixed cards and boxes on homepage on mobile resolutions

--- a/assets/sass/_sections.scss
+++ b/assets/sass/_sections.scss
@@ -42,10 +42,6 @@ section {
 
     amp-carousel.single {
       max-width: 100%;
-
-      .box__content {
-        flex: none;
-      }
     }
   }
 
